--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-graphql-ui",
+  "name": "@tesseractcollective/react-graphql-ui",
   "version": "0.1.0",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
