--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
   "scripts": {
@@ -34,8 +34,10 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "primereact": "^6.6.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-router-dom": "^5.3.0",
+    "react-transition-group": "^4.4.2",
     "ttypescript": "^1.5.12",
     "urql": "^2.0.5",
     "vite": "^2.6.10",
