--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "@tesseractcollective/react-graphql": "^0.9.14",
     "primereact": "^6.6.0",
     "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-hook-form": "^7.17.5",
-    "urql": "^2.0.5"
+    "react-transition-group": "^7.17.5"
   },
   "module": "dist/react-graphql-ui.es.js",
   "types": "dist/index.d.ts",
