--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
   "scripts": {
@@ -24,12 +24,13 @@
   "homepage": "https://github.com/tesseractcollective/react-graphql-ui#readme",
   "dependencies": {
     "case": "^1.6.3",
+    "graphql": "15.x.x",
     "jotai": "^1.4.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1"
   },
   "devDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.14",
+    "@tesseractcollective/react-graphql": "^0.9.15",
     "@types/history": "^4.7.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "primereact": "^6.6.0",
@@ -43,7 +44,7 @@
     "vite-tsconfig-paths": "^3.3.17"
   },
   "peerDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.14",
+    "@tesseractcollective/react-graphql": "^0.9.15",
     "primereact": "^6.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
