--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
-  "main": "dist/react-graphql-ui.es.js",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm webmode && vite build && ttsc --project tsconfig-web.build.json",
@@ -25,7 +25,6 @@
   "dependencies": {
     "case": "^1.6.3",
     "graphql": "15.x.x",
-    "jotai": "^1.4.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1"
   },
@@ -49,13 +48,15 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.17.5",
-    "react-transition-group": "^7.17.5"
+    "react-transition-group": "^7.17.5",
+    "jotai": "^1.4.0"
   },
-  "module": "dist/react-graphql-ui.es.js",
-  "types": "dist/index.d.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/react-graphql-ui.es.js"
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   }
 }
