--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tesseractcollective/react-graphql-ui",
   "version": "0.2.2",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "dist/react-graphql-ui.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm webmode && vite build && ttsc --project tsconfig-web.build.json",
@@ -32,6 +32,7 @@
     "@tesseractcollective/react-graphql": "^0.9.15",
     "@types/history": "^4.7.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "jotai": "^1.4.0",
     "primereact": "^6.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,12 +52,11 @@
     "react-transition-group": "^7.17.5",
     "jotai": "^1.4.0"
   },
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
+  "module": "dist/react-graphql-ui.es.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "require": "./src/index.ts"
+      "import": "./dist/react-graphql-ui.es.js"
     }
   }
 }
