--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "jotai": "^1.4.0",
     "primereact": "^6.6.0",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
@@ -45,12 +46,13 @@
   },
   "peerDependencies": {
     "@tesseractcollective/react-graphql": "^0.9.15",
+    "jotai": "^1.4.0",
+    "quill": "^1.3.7",
     "primereact": "^6.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.17.5",
-    "react-transition-group": "^7.17.5",
-    "jotai": "^1.4.0"
+    "react-transition-group": "^7.17.5"
   },
   "module": "dist/react-graphql-ui.es.js",
   "types": "dist/index.d.ts",
