--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.2.3",
+  "version": "rc0.3.0",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "query-string": "^7.0.1"
   },
   "devDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.15",
+    "@tesseractcollective/react-graphql": "^0.9.16",
     "@types/history": "^4.7.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "jotai": "^1.4.0",
