--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.3.0rc",
+  "version": "0.3.0rc-2",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
   "scripts": {
