--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.3.0rc-2",
+  "version": "0.3.0rc-3",
   "description": "",
   "main": "dist/react-graphql-ui.es.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "query-string": "^7.0.1"
   },
   "devDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.16",
+    "@tesseractcollective/react-graphql": "workspace:^0.9.16",
     "@types/history": "^4.7.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "jotai": "^1.4.0",
@@ -45,7 +45,7 @@
     "vite-tsconfig-paths": "^3.3.17"
   },
   "peerDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.15",
+    "@tesseractcollective/react-graphql": "workspace:^0.9.16",
     "jotai": "^1.4.0",
     "quill": "^1.3.7",
     "primereact": "^6.6.0",
