--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "",
-  "main": "dist/react-graphql-ui.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm webmode && vite build && ttsc --project tsconfig-web.build.json",
@@ -22,17 +21,17 @@
     "url": "https://github.com/tesseractcollective/react-graphql-ui/issues"
   },
   "homepage": "https://github.com/tesseractcollective/react-graphql-ui#readme",
-  "dependencies": {
+  "devDependencies": {
     "case": "^1.6.3",
     "graphql": "15.x.x",
-    "lodash": "^4.17.21",
-    "query-string": "^7.0.1"
-  },
-  "devDependencies": {
+    "query-string": "^7.0.1",
     "@tesseractcollective/react-graphql": "^0.9.16",
     "@types/history": "^4.7.9",
+    "@types/lodash": "^4.14.177",
+    "@types/react": "^17.0.37",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "jotai": "^1.4.0",
+    "lodash": "^4.17.21",
     "primereact": "^6.6.0",
     "quill": "^1.3.7",
     "react": "^17.0.2",
@@ -40,6 +39,8 @@
     "react-hook-form": "^7.17.5",
     "react-transition-group": "^4.4.2",
     "ttypescript": "^1.5.12",
+    "typescript": "^4.5.2",
+    "typescript-transform-paths": "^3.3.1",
     "urql": "^2.0.5",
     "vite": "^2.6.10",
     "vite-tsconfig-paths": "^3.3.17"
@@ -54,11 +55,13 @@
     "react-hook-form": "^7.17.5",
     "react-transition-group": "^7.17.5"
   },
-  "module": "dist/react-graphql-ui.es.js",
+  "main": "dist/react-graphql-ui.es.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/react-graphql-ui.es.js"
+      "import": "./dist/index.js",
+      "require": "./dist/react-graphql-ui.es.js"
     }
   }
 }
