--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
   "version": "0.3.6",
-  "description": "",
+  "description": "A library built on top of react-graphql to give you various components and hooks to help speed up development. Currently include features for DataTables, Forms, and Dropdowns based on DB relationships",
+  "keywords": [
+    "graphql",
+    "react-graphql",
+    "hasura",
+    "datatable"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm webmode && vite build && ttsc --project tsconfig-web.build.json",
@@ -15,8 +21,8 @@
     "type": "git",
     "url": "git+https://github.com/tesseractcollective/react-graphql-ui.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "@tesseractcollective",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tesseractcollective/react-graphql-ui/issues"
   },
@@ -55,13 +61,13 @@
     "react-hook-form": "^7.17.5",
     "react-transition-group": "^7.17.5"
   },
-  "main": "dist/react-graphql-ui.es.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/react-graphql-ui.es.js"
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   }
 }
