--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
   "version": "0.3.6",
-  "description": "",
+  "description": "A library built on top of react-graphql to give you various components and hooks to help speed up development. Currently include features for DataTables, Forms, and Dropdowns based on DB relationships",
+  "keywords": [
+    "graphql",
+    "react-graphql",
+    "hasura",
+    "datatable"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm webmode && vite build && ttsc --project tsconfig-web.build.json",
@@ -15,8 +21,8 @@
     "type": "git",
     "url": "git+https://github.com/tesseractcollective/react-graphql-ui.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "@tesseractcollective",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tesseractcollective/react-graphql-ui/issues"
   },
