--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
   },
   "homepage": "https://github.com/tesseractcollective/react-graphql-ui#readme",
   "devDependencies": {
-    "case": "^1.6.3",
-    "graphql": "15.x.x",
-    "query-string": "^7.0.1",
     "@tesseractcollective/react-graphql": "^0.9.16",
     "@types/history": "^4.7.9",
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.37",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "case": "^1.6.3",
+    "graphql": "15.x.x",
     "jotai": "^1.4.0",
     "lodash": "^4.17.21",
-    "primereact": "^6.6.0",
+    "query-string": "^7.0.1",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,7 +47,6 @@
   "peerDependencies": {
     "@tesseractcollective/react-graphql": "^0.9.16",
     "jotai": "^1.4.0",
-    "primereact": "^6.6.0",
     "quill": "^1.3.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -63,5 +61,8 @@
       "import": "./dist/index.js",
       "require": "./dist/react-graphql-ui.es.js"
     }
+  },
+  "dependencies": {
+    "primereact": "6.x.x"
   }
 }
