--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A library built on top of react-graphql to give you various components and hooks to help speed up development. Currently include features for DataTables, Forms, and Dropdowns based on DB relationships",
   "keywords": [
     "graphql",
@@ -59,13 +59,13 @@
     "react-hook-form": "^7.17.5",
     "react-transition-group": "^7.17.5"
   },
-  "main": "dist/react-graphql-ui.es.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/react-graphql-ui.es.js"
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   },
   "dependencies": {
