--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesseractcollective/react-graphql-ui",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A library built on top of react-graphql to give you various components and hooks to help speed up development. Currently include features for DataTables, Forms, and Dropdowns based on DB relationships",
   "keywords": [
     "graphql",
@@ -28,47 +28,45 @@
   },
   "homepage": "https://github.com/tesseractcollective/react-graphql-ui#readme",
   "devDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.16",
-    "@types/history": "^4.7.9",
-    "@types/lodash": "^4.14.177",
-    "@types/react": "^17.0.37",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@tesseractcollective/react-graphql": "0.9.17",
+    "@types/history": "4.7.9",
+    "@types/lodash": "4.14.177",
+    "@types/react": "17.0.37",
+    "@vitejs/plugin-react-refresh": "1.3.6",
     "case": "^1.6.3",
-    "graphql": "15.x.x",
-    "jotai": "^1.4.0",
-    "lodash": "^4.17.21",
-    "query-string": "^7.0.1",
+    "graphql": "15.7.2",
+    "jotai": "1.4.6",
+    "lodash": "4.17.21",
+    "query-string": "7.0.1",
     "quill": "^1.3.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.17.5",
-    "react-transition-group": "^4.4.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.20.5",
+    "react-transition-group": "4.4.2",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.2",
-    "typescript-transform-paths": "^3.3.1",
-    "urql": "^2.0.5",
-    "vite": "^2.6.10",
-    "vite-tsconfig-paths": "^3.3.17"
+    "typescript": "4.5.2",
+    "typescript-transform-paths": "3.3.1",
+    "urql": "2.0.5",
+    "vite": "2.6.14",
+    "vite-tsconfig-paths": "3.3.17"
   },
   "peerDependencies": {
-    "@tesseractcollective/react-graphql": "^0.9.16",
-    "jotai": "^1.4.0",
+    "@tesseractcollective/react-graphql": "0.9.17",
+    "jotai": "1.4.6",
     "quill": "^1.3.7",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-hook-form": "^7.17.5",
-    "react-transition-group": "^7.17.5"
+    "react-hook-form": "7.20.5",
+    "react-transition-group": "4.4.2"
   },
-  "main": "./src/index.ts",
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "dist/react-graphql-ui.es.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "require": "./src/index.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/react-graphql-ui.es.js"
     }
   },
   "dependencies": {
-    "primereact": "7.x.x"
+    "primereact": "7.2.1"
   }
 }
